# Kaggle-Text-to-Image-Generation-Challenge

./: .gitignore  README.md  pyproject.toml
configs/: generation_config.json
evaluation/: __init__.py  f1_metric.py  hyperparameter_sweep.py  object_count_reinforcement.py  offline_runner.py  prompt_loader.py  prompt_parser.py  realism_bias_tuning.py  yolo_detector.py
generation/: __init__.py  generate_baseline.py  generate_final.py  generate_multisample.py  generate_report_bundle.py  negative_prompt_strategy.py  prompt_optimizer.py
prompts/: DreamLayer-Prompt-Kaggle.txt
scripts/: gpu_compatibility_test.py  validate_environment.sh  verify_dreamlayer.py  yolo_inference_test.py
tests/: test_f1_metric.py  test_generate_baseline.py  test_generate_final.py  test_generate_multisample.py  test_generate_report_bundle.py  test_hyperparameter_sweep.py  test_negative_prompt_strategy.py  test_object_count_reinforcement.py  test_offline_runner.py  test_prompt_loader.py  test_prompt_optimizer.py  test_prompt_parser.py  test_realism_bias_tuning.py  test_yolo_detector.py
